# calsim-view

./: .gitignore  README.md  pyproject.toml  render.yaml
.github/: copilot-instructions.md
.github/memory/: IMPLEMENTATION.md
csview/: __init__.py
csview/app/: __init__.py  __main__.py  build.sh  schemas.py  server.py  state.py
csview/app/frontend/: index.html  package-lock.json  package.json
csview/app/frontend/src/: App.jsx  index.css  main.jsx
csview/app/frontend/src/api/: client.js
csview/app/frontend/src/components/: GwBudgetPanel.jsx  NeighborhoodGraph.jsx  NetworkMap.jsx  NodePanel.jsx  NodeSearch.jsx  RegionalLayers.jsx  ResultsChart.jsx  StudySelector.jsx  YearRangeSlider.jsx
csview/app/routers/: __init__.py  network.py  study.py
csview/app/static/: index.html
csview/app/static/assets/: index--mrnyd98.js  index-BRlZVhFp.js  index-BZR-9j43.css  index-BpUGct20.js  index-Br0O9Rbu.js  index-CUTHv3a6.css  index-Cz5S8EdC.css  index-DJf5XCB4.css  index-DRxrbZsF.js  index-DtpBlufV.js  index-N_HJmpza.css  index-NuycBTm_.js  index-dv9Mki90.css  index-rCq0X4J9.css
csview/geo/: __init__.py  __main__.py  diagnostics.py  loader.py  models.py  overlay_simplify.py  wresl_parser.py
csview/study/: __init__.py  __main__.py  dss_cache.py  dss_reader.py  gw_budget.py  store.py
data/network/: c2vsim_elements.geojson  c2vsim_subregions.geojson  network.json  network_diagnostics.json
data/study/study_a/: gw_budget.parquet  gw_budget_meta.json  results_meta.json
data/study/study_b/: gw_budget.parquet  gw_budget_meta.json  results_meta.json
(+3 files in other folders)
