[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calsim-view"
version = "2026.02.23"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiofiles",
    "pydantic>=2",
    "pandas",
    "numpy",
    "pyarrow",
]

[project.optional-dependencies]
# Install pydsstools via conda: conda install -c arthurlutz pydsstools
# It is not available on PyPI; omit from pip-resolved deps.
dev = [
    "httpx",   # for FastAPI test client
]

[project.scripts]
calsim-view = "csview.app.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["csview*"]
